--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 function find_question() {
     
 var random_question = Math.floor(Math.random() * 358899);
+random_question = 1;
 var request = new XMLHttpRequest()
 
 
@@ -94,7 +95,10 @@ request.onload = function () {
     //replace (pic: xxxxxxx.jpg) with image tags
     let regEx = /\(pic: (\S+)\)/gm;
     text = text.replaceAll(regEx,function(string,filename){
-      return '<img src="https://db.chgk.info/images/db/'+filename+'">';
+      if (filename.substring(0,4)=='http')
+        return '<img src="'+filename+'">';
+      else
+        return '<img src="https://db.chgk.info/images/db/'+filename+'">';
     });
 
     return text;
